fixed a couple of issues

--- a/action_quarterly_july_2012.html
+++ b/action_quarterly_july_2012.html
@@ -387,7 +387,7 @@ We build strong software, hardware, and communities.</div>
                                                     <tr mc:repeatable>
                                                         <td valign="top">
                                                         	<div mc:edit="postcard_heading00"></div>
-                                                            <img src="http://gallery.mailchimp.com/2a155fe9249e50a0475263a9c/images/fabricatorz_and_friends_bw.jpg" style="max-width:560px;" mc:label="postcard_image" mc:edit="postcard_image" mc:allowtext>
+                                                            <!-- <img src="http://gallery.mailchimp.com/2a155fe9249e50a0475263a9c/images/fabricatorz_and_friends_bw.jpg" style="max-width:560px;" mc:label="postcard_image" mc:edit="postcard_image" mc:allowtext> -->
                                                             <div mc:edit="std_content00"><br>
 <strong>Hello Friends,</strong><br>
 <br>
@@ -451,7 +451,7 @@ Sincerely,<br>
                                                     </tr>
                                                     <tr>
                                                         <td valign="top" width="350">
-                                                            <div mc:edit="std_footer"><a href="http://sharism.org" style="color:red;">&#10035;</a>&nbsp;<em>*|CURRENT_YEAR|* *|LIST:COMPANY|*, <a href="http://fabricatorz.com" target="_blank">Fabricatorz.com</a>.</em><br>
+                                                            <div mc:edit="std_footer"><a href="http://sharism.org" style="color:red;">&#10035;</a>&nbsp; <a href="http://fabricatorz.com" target="_blank">Fabricatorz</a>.<br>
 *|IFNOT:ARCHIVE_PAGE|* *|LIST:DESCRIPTION|*<br>
 <strong>Our mailing address is:</strong><br>
 *|HTML:LIST_ADDRESS_HTML|**|END:IF|* </div>
