--- a/action_quarterly_july_2012.html
+++ b/action_quarterly_july_2012.html
@@ -345,7 +345,7 @@ We build strong software, hardware, and communities.</div>
                                             <!-- *|IFNOT:ARCHIVE_PAGE|* -->
 											<td valign="top" width="190">
                                             	<div mc:edit="std_preheader_links">
-                                                	Is this email not displaying correctly?<br><a href="*|ARCHIVE|*" target="_blank">View it in your browser</a>.
+                                                	Is this email not displaying correctly?<br><a href="http://fabricatorz.com" target="_blank">Visit Fabricatorz Online</a>.
                                                 </div>
                                             </td>
 											<!-- *|END:IF|* -->
